# HSM_framework_experiment

./: .gitignore  CMakeLists.txt  main.cpp  valgrind.xml
Examples/: CMakeLists.txt
Examples/qhsmtst/: CMakeLists.txt  README.md  original_qhsmtst.cpp  original_qhsmtst.hpp  qhsmtst.md  test.cpp
FrameworkTest/CommonFiles/qhsmtst/: original_qhsmtst.cpp  test.cpp
FrameworkTest/STM32L0/qhsmtst/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  STM32L053R8TX_FLASH.ld  qhsmtst.ioc
FrameworkTest/STM32L0/qhsmtst/Core/Inc/: stm32l0xx_it.h
FrameworkTest/STM32L0/qhsmtst/Core/Src/: main.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
FrameworkTest/Windows/qhsmtst/: CMakeLists.txt  main.cpp
KaoriFramework/: CMakeLists.txt  KaoriHSM.hpp  README.md
Kaori_Framework/: Events.hpp  HFSM.hpp  State.hpp
Kaori_Tests_Files/: Custom_Hsfm.hpp  Custom_Hsfm2.hpp  HFSM_QP_replica.cpp  HFSM_QP_replica.hpp
Performances/: QP_HFSM_Execution_Time.xlsx
